--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,26 @@
-.App {
-  text-align: center;
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+.element {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    min-height: 210px;
+    width: 280px;
+    margin: 8px 16px;
+    background: white;
+    color: #777777;
+    text-align: center;
+    padding: 15px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.element:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0.22);
 }
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
