--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #efefef;
 }
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,700,500italic,900,700italic,900italic);
+* {
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.2;
+    vertical-align: middle;
+}
+
+
