--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,24 @@
 .main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-
 .element {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    min-height: 50px;
-    width: 280px;
-    margin: 8px 16px;
-    background: white;
-    color: #777777;
-    text-align: center;
-    padding: 15px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  min-height: 50px;
+  width: 280px;
+  margin: 8px 16px;
+  background: white;
+  color: #777777;
+  text-align: center;
+  padding: 15px;
+  margin: 0 auto;
 }
 
 .element:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0.22);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0.22);
 }
-
-
