--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,31 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .element {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 110px;
+  min-height: 100px;
+  background: #fff;
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  min-height: 50px;
-  width: 280px;
-  margin: 8px 16px;
-  background: white;
-  color: #777777;
-  text-align: center;
-  padding: 15px;
-  margin: 0 auto;
 }
 
 .element:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0.22);
+}
+
+.element__symbol {
+  font-size: 35px;
+}
+
+.element__name {
+  font-size: 12px;
 }
