--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: #efefef;
+  margin: 0;
+  padding: 0;
+  background: #3c4455;
 }
+
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,700,500italic,900,700italic,900italic);
+
 * {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.2;
-    vertical-align: middle;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.2;
+  vertical-align: middle;
 }
-
-
