--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   cursor: pointer;
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  user-select: none;
 }
 
 .element:hover {
