--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,37 @@
-.main {
+.main__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 40px;
   margin-bottom: 40px;
+  margin-top: 70px;
+}
+
+.main__header {
+  width: 100%;
+  height: 50px;
+  background: #383f4c;
+  color: #fff;
+  overflow-x: auto;
+  margin-bottom: 40px;
+  overflow-y: hidden;
+  white-space: nowrap;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+.main__header span {
+  width: 40px;
+  height: inherit;
+  display: inline-block;
+  padding: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+  line-height: 25px;
 }
 
 .element {
