--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,16 @@ body {
   line-height: 1.2;
   vertical-align: middle;
 }
+
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: outset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #333946;
+  outline: 1px solid #3c4455;
+}
