--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 
 .main__header {
   width: 100%;
-  height: 50px;
+  height: 56px;
   background: #383f4c;
   color: #fff;
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
   margin-bottom: 40px;
   overflow-y: hidden;
   white-space: nowrap;
@@ -23,8 +24,8 @@
   z-index: 1;
 }
 
-.main__header span {
-  width: 40px;
+.main__header a {
+  width: 45px;
   height: inherit;
   display: inline-block;
   padding: 10px;
@@ -33,10 +34,13 @@
   text-align: center;
   cursor: pointer;
   user-select: none;
-  line-height: 30px;
+  line-height: 35px;
+  text-decoration: none;
+  color: #fff;
 }
 
-.main__header span:active {
+.main__header a:first-child,
+.main__header a:active {
   background: #3c4455;
 }
 
