--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   margin-top: 70px;
 }
 
+.main__container.blur {
+  filter: blur(5px);
+}
+
 .main__header {
   width: 100%;
   height: 56px;
@@ -39,7 +43,6 @@
   color: #fff;
 }
 
-.main__header a:first-child,
 .main__header a:active {
   background: #3c4455;
 }
@@ -87,14 +90,14 @@
 }
 
 .modal__overlay {
-  background: rgba(0, 0, 0, 0.5);
+  background: transparent;
   z-index: -1;
 }
 
 .modal__container {
   background: #fff;
-  width: 250px;
-  height: 250px;
+  width: 280px;
+  height: 280px;
   position: absolute;
   left: 0;
   right: 0;
@@ -116,8 +119,13 @@
 }
 
 .modal__content {
-  width: inherit;
-  height: inherit;
+  backface-visibility: hidden;
+}
+
+.modal__content,
+.modal__content-details {
+  width: 280px;
+  height: 280px;
   padding: 15px;
   transform: rotateY(0);
   transition: 0.6s;
@@ -125,8 +133,18 @@
   user-select: none;
 }
 
+.modal__content-details {
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+}
+
 .modal__content:active {
   transform: rotateY(-180deg);
+}
+
+.modal__content:active + .modal__content-details {
+
 }
 
 .modal__element-symbol {
@@ -141,7 +159,7 @@
 
 .modal__element-symbol p:first-child {
   margin-left: 4px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .modal__element-symbol p:last-child {
@@ -165,7 +183,7 @@
 
 .modal__element-info {
   margin-top: 25px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 @keyframes scaleUp {
