--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   box-sizing: border-box;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,700,500italic,900,700italic,900italic);
+@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,700,500italic,900,700italic,900italic);
 
 * {
   font-family: 'Roboto', sans-serif;
